# teltonika-gpl-sdk-rutx09

./: .config  Config.in  Makefile  README  README.md  changelog  gpl_version  ipk_packages.json  rules.mk  version.date
config/: Config-brand.in  Config-build.in  Config-gpl.in  Config-images.in  Config-kernel.in  Config-options.in  Config-tlt.in  Config-tweaks.in
include/: Dockerfile  banner.logo  cmake.mk  download.mk  gpl.mk  hardware.mk  host-build.mk  image-commands.mk  image.mk  itest.mk  kernel-defaults.mk  kernel-version.mk  kernel.mk  migrations.mk  netfilter.mk  openrc.mk  os-version.mk  package-defaults.mk  package-dumpinfo.mk  package-gpl.mk  package-ipkg.mk  package-test.mk  package.mk  portable.mk  prereq-build.mk  prereq.mk  rootfs.mk  target-gpl.mk  target.mk  toplevel.mk  trusted-firmware-a.mk  unpack-upstream.mk  unpack.mk  version.mk
ipk-example/: Makefile  README.md
ipk-example/files/: example.sh
package/: Makefile
package/base-files/: Makefile  image-config.in
package/p910nd/: Makefile
package/teltonika/uqmi/src/: CMakeLists.txt  commands-nas.c  commands-wda.c  commands-wda.h  commands-wds.c  commands-wds.h  commands.c  commands.h  dev.c  libuqmi.c  libuqmi.h  main.c  qmi-enums-wds.h  qmi-message.c  qmi-message.h  uqmi.h
package/teltonika/uqmi/src/data/: gen-verbose-error-list.pl  qmi-service-wda.json
scripts/: Dockerfile  arch.py  auto-exec.sh  buildsummary.sh  check-toolchain-clean.sh  compress.sh  deploy_to_fota.py  docker-bootstrap  docker-run-rootfs.sh  dockerbuild  download.pl  feeds  fix-local-tags.sh  fw_files_diff  fw_files_diff.py  gen-board-info.sh  gen-desc.py  gen-ftable.py  generate_descriptions.sh  ipkg-build  ipkg-make-index.sh  lint_etc_files.py  metadata.pm  mkits.sh  openrc-install  package-metadata.pl  parse_AWS_logs.py  prepare_tlt_pm_packages.sh  remote-gdb  rom_diff.py  rstrip.sh  sign_images.sh  sign_packages.sh  target-metadata.pl  tests_build.sh  tests_upload_and_run.sh  upload_opkg.sh
scripts/config/: conf.c  expr.h  lexer.l  lexer.lex.c  mconf-cfg.sh  parser.tab.c  parser.tab.h  parser.y
scripts/create_changelog/: main.js
scripts/tests/: test_deploy_to_fota.py
toolchain/: Config.in  Makefile
toolchain/binutils/: Makefile
toolchain/fortify-headers/: Makefile
toolchain/gcc/: Config.in  Config.version  common.mk
toolchain/gdb/: Makefile
toolchain/glibc/: common.mk
toolchain/kernel-headers/: Makefile
toolchain/musl/: common.mk
toolchain/nasm/: Makefile
toolchain/python2/: Makefile
tools/: Makefile
tools/autoconf/: Makefile
tools/autoconf-archive/: Makefile
tools/automake/: Makefile
tools/bc/: Makefile
tools/bison/: Makefile
tools/cmake/: Makefile
tools/cppcheck/: Makefile
tools/dosfstools/: Makefile
tools/e2fsprogs/: Makefile
tools/emcc/: Makefile
tools/expat/: Makefile
tools/findutils/: Makefile
tools/firmware-utils/: Makefile
tools/flex/: Makefile
tools/flock/: Makefile
tools/gengetopt/: Makefile
tools/gmp/: Makefile
tools/libressl/: Makefile
tools/libtool/: Makefile
tools/lzma/: Makefile
tools/m4/: Makefile
tools/make-ext4fs/: Makefile
tools/missing-macros/: Makefile
tools/mkimage/: Makefile
tools/mklibs/: Makefile
tools/mm-macros/: Makefile
tools/mpc/: Makefile
tools/mpfr/: Makefile
tools/mtd-utils/: Makefile
tools/mtools/: Makefile
tools/padjffs2/: Makefile
tools/patch/: Makefile
vuci-examples/: README
(+4058 files in other folders)
